Cleanup of CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,15 +51,14 @@ endif(NOT orocos_kdl_FOUND)
 
 
 
-include_directories(SYSTEM  ${orocos_kdl_INCLUDE_DIRS})
+include_directories(SYSTEM ${orocos_kdl_INCLUDE_DIRS})
+set(KDL_FORMAT_IO_INCLUDE_DIRS "${KDL_FORMAT_IO_INCLUDE_DIRS} " ${orocos_kdl_INCLUDE_DIRS})
 
 IF( ENABLE_URDF ) 
     find_package(TinyXML)
     IF( NOT TinyXML_FOUND )
         message("Disabling URDF support as no TinyXML was found")
         set(ENABLE_URDF FALSE)
-    ELSE()
-         include_directories(SYSTEM ${TinyXML_INCLUDE_DIRS})
     ENDIF()
 ENDIF()
 
@@ -68,8 +67,6 @@ IF( ENABLE_URDF )
     IF( NOT urdfdom_headers_CONFIG_INCLUDED )
         message("Disabling URDF support as no urdfdom_headers was found")
         set(ENABLE_URDF FALSE)
-    ELSE()
-        include_directories(SYSTEM ${urdfdom_headers_INCLUDE_DIRS})
     ENDIF()
 ENDIF()
 
@@ -78,8 +75,6 @@ IF( ENABLE_URDF )
     IF( NOT urdfdom_CONFIG_INCLUDED )
         message("Disabling URDF support as no urdfdom was found")
         set(ENABLE_URDF FALSE)
-    ELSE()
-        include_directories(SYSTEM ${urdfdom_INCLUDE_DIRS})
     ENDIF()
 ENDIF()
 
@@ -88,20 +83,14 @@ IF( ENABLE_URDF )
     IF( NOT ${console_bridge_CONFIG_INCLUDED} )
         message("Disabling URDF support as no console_bridge was found")
         set(ENABLE_URDF FALSE)
-    ELSE()
-        include_directories(SYSTEM ${console_bridge_INCLUDE_DIRS})
-        link_directories(${console_bridge_LIBRARY_DIRS})    
     ENDIF()
 ENDIF()
 
 IF( ENABLE_URDF ) 
-        find_package(Boost REQUIRED thread)
+    find_package(Boost REQUIRED thread)
     IF( NOT ${Boost_FOUND} )
         message("Disabling URDF support as no Boost was found")
         set(ENABLE_URDF FALSE)
-    ELSE()
-        include_directories(SYSTEM ${console_bridge_INCLUDE_DIRS})
-        link_directories(${console_bridge_LIBRARY_DIRS}) 
     ENDIF()
 ENDIF()
 
@@ -112,7 +101,9 @@ IF(ENABLE_SERIALIZATION_IO)
         set(ENABLE_SERIALIZATION_IO FALSE)
     ELSE()
          include_directories(SYSTEM ${kdl_codyco_INCLUDE_DIRS})
+         set(KDL_FORMAT_IO_INCLUDE_DIRS "${KDL_FORMAT_IO_INCLUDE_DIRS} " ${kdl_codyco_INCLUDE_DIRS})
          link_directories(${kdl_codyco_LIBRARY_DIRS})
+         set(KDL_FORMAT_IO_LIBRARY_DIRS "${KDL_FORMAT_IO_LIBRARY_DIRS} " ${kdl_codyco_LIBRARY_DIRS})
     ENDIF()
 ENDIF()
 
@@ -120,6 +111,15 @@ include_directories(include)
 
                      
 if(ENABLE_URDF) 
+    include_directories(SYSTEM ${TinyXML_INCLUDE_DIRS})
+    include_directories(SYSTEM ${urdfdom_INCLUDE_DIRS})
+    include_directories(SYSTEM ${urdfdom_headers_INCLUDE_DIRS})
+    include_directories(SYSTEM ${console_bridge_INCLUDE_DIRS})
+    set(KDL_FORMAT_IO_INCLUDE_DIRS "${KDL_FORMAT_IO_INCLUDE_DIRS} " ${TinyXML_INCLUDE_DIRS} ${urdfdom_INCLUDE_DIRS} ${urdfdom_headers_INCLUDE_DIRS} ${console_bridge_INCLUDE_DIRS})
+
+    link_directories(${console_bridge_LIBRARY_DIRS})
+    set(KDL_FORMAT_IO_LIBRARY_DIRS "${KDL_FORMAT_IO_LIBRARY_DIRS} " ${console_bridge_LIBRARY_DIRS})
+
     set(URDF_SRCS src/converters/urdf_export.cpp src/converters/urdf_import.cpp)
     set(URDF_HPPS include/kdl_format_io/urdf_import.hpp include/kdl_format_io/urdf_export.hpp)
     set(URDF_LIBS ${urdfdom_LIBRARIES} ${console_bridge_LIBRARIES} ${Boost_LIBRARIES})
@@ -140,12 +140,14 @@ endif()
 
 set(KDL_FORMAT_IO_HPPS ${SYMORO_PAR_HPPS} ${URDF_HPPS}) 
 
-add_library(kdl_format_io SHARED ${URDF_SRCS} ${SYMORO_PAR_SRCS})
+add_library(kdl-format-io SHARED ${URDF_SRCS} ${SYMORO_PAR_SRCS})
 
 IF(ENABLE_SERIALIZATION_IO)
-    target_link_libraries(kdl_format_io kdl_codyco ${URDF_LIBS}  ${orocos_kdl_LIBRARIES})
+    target_link_libraries(kdl-format-io ${kdl_codyco_LIBRARIES} ${URDF_LIBS}  ${orocos_kdl_LIBRARIES})
+    set(KDL_FORMAT_IO_LIBRARIES ${kdl_codyco_LIBRARIES} ${URDF_LIBS} ${orocos_kdl_LIBRARIES})
 ELSE()
-    target_link_libraries(kdl_format_io ${URDF_LIBS}  ${orocos_kdl_LIBRARIES})
+    target_link_libraries(kdl-format-io ${URDF_LIBS}  ${orocos_kdl_LIBRARIES})
+    set(KDL_FORMAT_IO_LIBRARIES ${URDF_LIBS}  ${orocos_kdl_LIBRARIES})
 ENDIF()
 
 
@@ -157,7 +159,7 @@ ENDIF()
 #add_executable(check_kdl_export src/check_kdl_export.cpp src/kdl_import.cpp src/kdl_export.cpp)
 #target_link_libraries(check_kdl_export ${kdl_format_io_LIBRARIES} ${urdfdom_headers_LIBRARIES}  ${urdfdom_LIBRARIES} ${console_bridge_LIBRARIES} ${Boost_LIBRARIES} ${Orocos-KDL_LIBRARIES})
 
-SET_TARGET_PROPERTIES( kdl_format_io PROPERTIES
+SET_TARGET_PROPERTIES( kdl-format-io PROPERTIES
   SOVERSION "${KDL_FORMAT_IO_VERSION_MAJOR}.${KDL_FORMAT_IO_VERSION_MINOR}"
   VERSION "${KDL_FORMAT_IO_VERSION}"
   COMPILE_FLAGS "${CMAKE_CXX_FLAGS_ADD}"
@@ -166,7 +168,7 @@ SET_TARGET_PROPERTIES( kdl_format_io PROPERTIES
   )
 
 
-INSTALL(TARGETS kdl_format_io
+INSTALL(TARGETS kdl-format-io
   EXPORT kdl_format_io-target
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
@@ -174,32 +176,20 @@ INSTALL(TARGETS kdl_format_io
 )
 
 
-export(TARGETS kdl_format_io FILE "${PROJECT_BINARY_DIR}/kdl_format_io-target.cmake")
+EXPORT(TARGETS kdl-format-io FILE "${PROJECT_BINARY_DIR}/kdl_format_io-target.cmake")
 
 EXPORT(PACKAGE kdl_format_io)
 
-set(PKG_NAME ${PROJECT_NAME})
-set(PKG_LIBRARIES kdl_format_io)
-set(PKG_DEPENDS urdfdom urdfdom_headers console_bridge)
-set(cmake_conf_file "${CMAKE_CURRENT_SOURCE_DIR}/cmake/kdl_format_io-config.cmake")
-configure_file("${cmake_conf_file}.in" "${cmake_conf_file}" @ONLY)
-install(FILES ${cmake_conf_file} DESTINATION share/${PROJECT_NAME}/cmake/ COMPONENT cmake)
-
-# Make the package config file
-if (NOT MSVC)
-  set(PKG_DESC "Kinematics Dynamics Library support for various robot description formats")
-  set(PKG_DEPENDS "orocos_kdl urdfdom urdfdom_headers console_bridge") # make the list separated by spaces instead of ;
-  set(PKG_URDF_LIBS "-lkdl_format_io")
-  set(pkg_conf_file "${CMAKE_CURRENT_SOURCE_DIR}/cmake/pkgconfig/kdl_format_io.pc")
-  configure_file("${pkg_conf_file}.in" "${pkg_conf_file}" @ONLY)
-  install(FILES ${pkg_conf_file} DESTINATION lib/pkgconfig/ COMPONENT pkgconfig)
-endif()
-
-CONFIGURE_FILE(cmake/kdl_format_io-config.cmake.in
-  ${PROJECT_BINARY_DIR}/kdl_format_io-config.cmake @ONLY)
-
+set(cmake_conf_file_raw "${CMAKE_CURRENT_SOURCE_DIR}/cmake/kdl_format_io-config.cmake.in")
 set(cmake_conf_file "${PROJECT_BINARY_DIR}/kdl_format_io-config.cmake")
-INSTALL(FILES ${cmake_conf_file} DESTINATION share/kdl_format_io)
+configure_file("${cmake_conf_file_raw}" "${cmake_conf_file}" @ONLY)
+install(FILES ${cmake_conf_file} DESTINATION share/${PROJECT_NAME})
+
+set(cmake_version_conf_file_raw "${CMAKE_CURRENT_SOURCE_DIR}/cmake/kdl_format_io-config-version.cmake.in")
+set(cmake_version_conf_file "${PROJECT_BINARY_DIR}/kdl_format_io-config-version.cmake")
+configure_file("${cmake_version_conf_file_raw}" "${cmake_version_conf_file}" @ONLY)
+install(FILES ${cmake_version_conf_file} DESTINATION share/${PROJECT_NAME})
+
 INSTALL(EXPORT kdl_format_io-target  DESTINATION share/kdl_format_io)
 
 option(CREATE_TESTS "Create regression tests using CMake" FALSE)
