--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,20 @@ compiler:
 env:
   - KDL_CODYCO_BUILD_TYPE=Debug
   - KDL_CODYCO_BUILD_TYPE=Release
+  global:
+   # The next declaration is the encrypted COVERITY_SCAN_TOKEN, created
+   #   via the "travis encrypt" command using the project repo's public key
+   - secure: ""
+
+addons:
+  coverity_scan:
+    project:
+      name: "traversaro/kdl_codyco"
+      description: "Kinematics and Dynamics Library extensions developed in the CoDyCo project."
+    notification_email: pegua1@gmail.com
+    build_command_prepend:
+    build_command:
+    branch_pattern: coverity_scan
 
 before_script:
   - sudo apt-get install -qq libeigen3-dev 
