added LINK_PUBLIC to target_link_libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,12 +70,12 @@ target_include_directories(idyntree PUBLIC "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR
                                             ${Eigen3_INCLUDE_DIR}
                                             ${kdl_format_io_INCLUDE_DIRS})
 
-target_link_libraries(idyntree iDyn
-                                     ${GSL_LIBRARIES}
-                                     ${YARP_LIBRARIES}
-                                     ${kdl_codyco_LIBRARIES}
-                                     ${kdl_format_io_LIBRARIES}
-                                     ${Boost_LIBRARIES})
+target_link_libraries(idyntree LINK_PUBLIC  iDyn
+                                            ${GSL_LIBRARIES}
+                                            ${YARP_LIBRARIES}
+                                            ${kdl_codyco_LIBRARIES}
+                                            ${kdl_format_io_LIBRARIES}
+                                            ${Boost_LIBRARIES})
 
 install(TARGETS idyntree
         EXPORT iDynTree
