corrected typo find_project -> find_package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS idyntree)
 #hack to include find_project(kdl_formato_io) only
 #if IDYNTREE_ENABLE_URDF is true
 if(IDYNTREE_ENABLE_URDF)
-    set(FIND_KDL_CODYCO_IDYNTREE_CONFIG "find_project(kdl_format_io REQUIRED)")
+    set(FIND_KDL_CODYCO_IDYNTREE_CONFIG "find_package(kdl_format_io REQUIRED)")
 endif()
 
 include(InstallBasicPackageFiles)
