Added missing definition of IDYNTREE_USES_ICUB macro

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ option(IDYNTREE_BUILD_TESTS "Compile iDynTree tests" FALSE)
 find_package(YARP REQUIRED)
 IF(IDYNTREE_USES_ICUB)
     find_package(ICUB REQUIRED)
+    add_definitions(-DIDYNTREE_USES_ICUB)
 ENDIF(IDYNTREE_USES_ICUB)
 find_package(orocos_kdl REQUIRED)
 find_package(kdl_codyco 0.0.3 REQUIRED)
