more tinyxml workaround

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ set_property(GLOBAL APPEND PROPERTY ${VARS_PREFIX}_TARGETS idyntree)
 #if IDYNTREE_ENABLE_URDF is true
 if(IDYNTREE_ENABLE_URDF)
     set(FIND_KDL_CODYCO_IDYNTREE_CONFIG "find_package(kdl_format_io REQUIRED)")
+    set(FIND_TINYXML_IDYNTREE_CONFIG "find_package(TinyXML REQUIRED)")
 endif()
 
 include(InstallBasicPackageFiles)
