Final tiynxml workaround (hoepfully)

--- a/iDynTreeConfig.cmake.in
+++ b/iDynTreeConfig.cmake.in
@@ -15,6 +15,7 @@ endif(NOT orocos_kdl_FOUND)
 find_package(kdl_codyco REQUIRED)
 
 @FIND_KDL_CODYCO_IDYNTREE_CONFIG@
+@FIND_TINYXML_IDYNTREE_CONFIG@
 
 set(iDynTree_VERSION @iDynTree_VERSION@)
 
