--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,15 +49,24 @@ if(NOT orocos_kdl_FOUND)
       set(orocos_kdl_LIBRARY_DIRS ${Orocos-KDL_LIBRARY_DIRS})
       set(orocos_kdl_LIBRARIES ${Orocos-KDL_LIBRARIES})
       set(orocos_kdl_FOUND true)
+      set(orocos_kdl_VERSION ${Orocos-KDL_VERSION})
+      set(orocos_kdl_VERSION_MAJOR ${Orocos-KDL_VERSION_MAJOR})
+      set(orocos_kdl_VERSION_MINOR ${Orocos-KDL_VERSION_MINOR})
+      set(orocos_kdl_VERSION_PATCH ${Orocos-KDL_VERSION_PATCH})
    endif(NOT Orocos-KDL_FOUND)
 endif(NOT orocos_kdl_FOUND)
 
-if (OROCOS_KDL_OLDVERSION)
-    configure_file(include/kdl_codyco/config.h.in ${CMAKE_SOURCE_DIR}/include/kdl_codyco/config.h)
-    message(STATUS "Old orocos kdl version. Adding include file to define compatibility macros.")
-else(OROCOS_KDL_OLDVERSION)
-    file(WRITE ./include/kdl_codyco/config.h "/**\n * Copyright  (C) 2013  CoDyCo Project\n * Author: Silvio Traversaro\n * website: http://www.codyco.eu\n */ ")
-endif (OROCOS_KDL_OLDVERSION)
+add_definitions(-DOROCOS_KDL_VERSION_MAJOR=${orocos_kdl_VERSION_MAJOR})
+add_definitions(-DOROCOS_KDL_VERSION_MINOR=${orocos_kdl_VERSION_MINOR})
+add_definitions(-DOROCOS_KDL_VERSION_PATCH=${orocos_kdl_VERSION_PATCH})
+
+
+# if (OROCOS_KDL_OLDVERSION)
+#     configure_file(include/kdl_codyco/config.h.in ${CMAKE_SOURCE_DIR}/include/kdl_codyco/config.h)
+#     message(STATUS "Old orocos kdl version. Adding include file to define compatibility macros.")
+# else(OROCOS_KDL_OLDVERSION)
+#     file(WRITE ./include/kdl_codyco/config.h "/**\n * Copyright  (C) 2013  CoDyCo Project\n * Author: Silvio Traversaro\n * website: http://www.codyco.eu\n */ ")
+# endif (OROCOS_KDL_OLDVERSION)
 
 include_directories(include ${orocos_kdl_INCLUDE_DIRS})
 
